# fast-api-demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
gaeko/src/: main.py
src/: main.py
src/api/: gecko_router.py
src/api/dto/: gecko_dto.py
src/domain/: gecko.py  user.py
src/infra/: database.py
