[project]
name = "gecko"
version = "0.0.1"
authors = [
  { name="kangho", email="inth1234@naver.com" },
]
description = "gecko"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
